v0.0.1.141 (04-09-2012)
- Updated to Frodo PVR API
v0.0.1.140 (03-06-2012)
- Fixed deletion of recordings due to api change
- Fixed instant-record failed due to start time set to 1970 by XBMC
v0.0.1.138 (02-06-2012)
- Full support for timeshift implemented in the add-on
v0.0.1.137 (18-05-2012)
- Fixed playing recording with national characters in names on Windows
v0.0.1.136 (01-05-2012)
- Aggressively optimised TsReader class
- Added new configurable delay in milliseconds after tuning a channel
v0.0.1.135 (12-04-2012)
- Small regression fixes after switch to new platform library
  When ForTheRecord returns 'NoRetunePossible' close the current live stream and
  then try to tune again
v0.0.1.134 (07-04-2012)
- Internal change: Switch to new platform library for threading and lock mechanisms
v0.0.1.133 (31-03-2012)
- The add-on now sets the time a recording was last watched on the server
v0.0.1.132 (20-03-2012)
- Small fix to correct one invalid GUID error message at start 
v0.0.1.131 (16-03-2012)
- Added many internal verifications to the <FTR GUID> to <XBMC number> 
  channel mappings. External factors can break the mapping and these
  checks will hopefully warn the user to reset the PVR database
v0.0.1.130 (11-03-2012)
- Fixed 64-bit Linux .tsbuffer processing
v0.0.1.129 (04-03-2012)
- Media Portal TV-Server will now work with the FTR - FTR Addon - XBMC combination
  Recording titles with trailing periods '...' will show up in XBMC,
  NOTICE: this requires FTR 1.6.1.0 Beta 5 or newer
v0.0.1.128 (23-01-2012)
- Added: System Info - PVR Information now shows FTR version info
  Timers do no longer retrieve the cancelled 'upcomingprograms' from ForTheRecord
v0.0.1.127 (20-01-2012)
- Added: System Info - PVR Information now shows total and used disk sizes
v0.0.1.126 (10-01-2012)
- Added: titles of recordings changed to be more descriptive
v0.0.1.125 (04-01-2012)
- Added: validation of the shares for all ForTheRecord tuners at startup
v0.0.1.124 (01-01-2012)